--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Maven Test
-        uses: mvn test
+        run: mvn test
     
       - name: Checkstyle
-        uses: mvn checkstyle:checkstyle
+        run: mvn checkstyle:checkstyle
 
 # Setup java 11 to be default ( sonar scanner req as of 5.x)
       - name: Set Java 11
